--- a/total.html
+++ b/total.html
@@ -94,7 +94,7 @@
       text-decoration: none;
     }
 
-    @media (max-width: 600px) {
+    (max-width: 600px) {
       header h1 {
         font-size: 2.2rem;
       }
