--- a/total.html
+++ b/total.html
@@ -158,7 +158,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Total Energy Ltd. All Rights Reserved.
+     2025 Total Energy Ltd. All Rights Reserved.
   </footer>
 
 </body>
