--- a/thika tec.html
+++ b/thika tec.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+use<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -77,7 +77,7 @@
       font-weight: 600;
     }
 
-    @media (max-width: 480px) {
+     (max-width: 480px) {
       .login-box {
         padding: 30px 20px;
       }
